# pyRobotiqUR

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: move_gripper.py
foo/: robotiq.py
pyRobotiqUR/: enums.py
pyrobotiqur/: __init__.py  enums.py  robotiq.py
tests/: test_robotiq.py
