[project]
name = "pyRobotiqUR"
version = "0.2.2"
description = "Simple Python interface for Robotiq grippers over a TCP socket (URCap/UR controller)."
authors = [
    {name = "Johannes Wenninger"}
]
license = "MIT"
readme = "README.md"
keywords = ["robotiq", "robotics", "gripper", "ur", "urcap"]
requires-python = ">=3.10 ,<=3.14"
dependencies = [
]

[project.urls]
Repository = "https://github.com/johannesWen/pyRobotiqUR"
Issues = "https://github.com/johannesWen/pyRobotiqUR/issues"
Changelog = "https://github.com/johannesWen/pyRobotiqUR/blob/master/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
# Additional options passed to pytest
addopts = "--cov --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pyrobotiqur"]
omit = ["*/tests/*", 
        "setup.py", 
        "docs/*", 
        "*/examples/*", 
        "*/__init__.py",
        "setup_logging.py",
        "main*.py",
        "config.py",
        "config-3.py",]
# data_file = "coverage/.coverage"

[tool.coverage.report]
show_missing = true
fail_under = 80

